# match_analyzer

./: .gitignore  README.md  VIBECODING.md  app.py  main.py  pyproject.toml
src/api/: football_api.py
src/config/: settings.py
src/models/: team_stats.py
src/services/: team_service.py
